--- a/gen-image-bot/src/main/resources/application-prod.yml
+++ b/gen-image-bot/src/main/resources/application-prod.yml
@@ -6,7 +6,7 @@ spring:
   jpa:
     open-in-view: false
     hibernate:
-      ddl-auto: validate
+      ddl-auto: create
     properties:
       hibernate:
         default_schema: image_bot
