--- a/contractor-list-bot/src/main/resources/application-prod.yml
+++ b/contractor-list-bot/src/main/resources/application-prod.yml
@@ -9,7 +9,7 @@ spring:
       ddl-auto: create
     properties:
       hibernate:
-        default_schema: image_bot
+        default_schema: contractors_bot
         dialect: org.hibernate.dialect.PostgreSQLDialect
         format_sql: true
       hibernate.naming.physical-strategy: org.hibernate.boot.model.naming.CamelCaseToUnderscoresNamingStrategy
@@ -17,8 +17,8 @@ spring:
   flyway:
     enabled: true
     locations: classpath:db/migration
-    default-schema: image_bot
-    schemas: image_bot
+    default-schema: contractors_bot
+    schemas: contractors_bot
     create-schemas: true
     # Если база уже непустая и вы начинаете вести миграции с текущего состояния:
     # baseline-on-migrate: true
