--- a/contractor-list-bot/src/main/resources/application-prod.yml
+++ b/contractor-list-bot/src/main/resources/application-prod.yml
@@ -6,7 +6,7 @@ spring:
   jpa:
     open-in-view: false
     hibernate:
-      ddl-auto: create
+      ddl-auto: validate
     properties:
       hibernate:
         default_schema: contractors_bot
@@ -14,12 +14,12 @@ spring:
         format_sql: true
       hibernate.naming.physical-strategy: org.hibernate.boot.model.naming.CamelCaseToUnderscoresNamingStrategy
 
-  flyway:
-    enabled: true
-    locations: classpath:db/migration
-    default-schema: contractors_bot
-    schemas: contractors_bot
-    create-schemas: true
-    # Если база уже непустая и вы начинаете вести миграции с текущего состояния:
-    # baseline-on-migrate: true
-    # baseline-version: 0
+#  flyway:
+#    enabled: true
+#    locations: classpath:db/migration
+#    default-schema: contractors_bot
+#    schemas: contractors_bot
+#    create-schemas: true
+#    # Если база уже непустая и вы начинаете вести миграции с текущего состояния:
+#    # baseline-on-migrate: true
+#    # baseline-version: 0
