Add ukassa payment provider
(cherry picked from commit 21d45ac75271382af6748306ab6c02d7c12bcfd9)

--- a/gen-image-bot/src/main/resources/application-prod.yml
+++ b/gen-image-bot/src/main/resources/application-prod.yml
@@ -33,3 +33,6 @@ runware:
   api:
     base-url: "https://api.runware.ai/v1"
     image-to-video-path: "https://api.runware.ai/v1"
+
+server:
+  port: 55532
